src/styles/components/_player.scss
.player-container{
  // border: 1px yellow solid;
  z-index: 999;
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  bottom: 0;
  .player-close{
    opacity: .1;
    position: absolute;
    top: 20px;
    right: 20px;
    // width: 20px;
    // height: 20px;
    font-size: 3rem;
    @extend .pointer;
    // @extend .dim;
    transition: all .4s;
    &:hover{
      opacity: 1;
      transition: all .4s;
    }

    &:active{
      opacity: .3;
      transition: all .4s;
    }
  }
  .player-inner-container{
    width: 100vw;
    height: 100vh;
  }
  iframe{
    width: 100% !important;
    height: 100% !important;
  }
}

